# UBA

./: .gitignore  Cargo.toml  ENCRYPTION_AND_RELAYS.md  README.md  TODO.md
bindings/: .gitignore  README.md
bindings/wasm/: .gitignore  API.md  COMPLETE_JAVASCRIPT_SOLUTION.md  Cargo.toml  README.md  build.sh  package.json
bindings/wasm/examples/: complete-javascript-solution.js  test-bindings.js  test-typescript.ts
bindings/wasm/src/: lib.rs
bindings/wasm/src/js/: index.ts
bindings/wasm/types/: index.d.ts
examples/: basic_usage.rs  cli_with_encryption.rs  encryption_and_relays.rs  encryption_demo.rs  retrieve_from_nostr_id.rs  show_addresses.rs  test_current_functionality.rs  test_relay_connectivity.rs  update_uba_demo.rs
src/: address.rs  encryption.rs  error.rs  lib.rs  nostr_client.rs  types.rs  uba.rs
