[package]
name = "uba"
version = "0.1.0"
edition = "2025"
authors = ["GianGuaz256"]
description = "A Rust library for creating and retrieving Unified Bitcoin Addresses (UBA) using Nostr relays"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GianGuaz256/UBA"
keywords = ["bitcoin", "nostr", "crypto", "address", "wallet"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
documentation = "https://github.com/GianGuaz256/UBA"

[dependencies]
bitcoin = "0.31"
nostr = "0.32"
nostr-sdk = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bip39 = "2.0"
hex = "0.4"
url = "2.5"
urlencoding = "2.1"

# Liquid sidechain support
elements = "0.24"

# Lightning Network support  
lightning = "0.0.122"
lightning-invoice = "0.31"

# Additional crypto utilities
secp256k1 = "0.28"

# Encryption support (ChaCha20Poly1305)
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
